# lunar_tools

./: .gitignore  README.md  README.md~  audio.py  lunar_man.py  pyproject.toml  pytest.ini  refactor.md  requirements.txt  setup.py  tox.ini
File: tests/: test_torch_utils_resize.py
diagnostics/: webrtc_diagnostics_receiver.py  webrtc_diagnostics_sender.py
docs/: README.md  audio_and_voice.md  communication.md  configuration.md  development.md  examples.md  inputs.md  logging_and_monitoring.md  migration.md  vision_and_display.md
examples/: __init__.py  __main__.py  deepgram_realtime_transcribe_example.py  flux_kontext_gradio.py  fps_tracker_example.py  midi_meta_example.py  midi_meta_test.py  movie_example.py  pygame_renderer_example.py  realtime_voice_example.py  simple_webcam_renderer.py  webcam_renderer_example.py  webrtc_receiver.py  webrtc_sender.py  zmq_remote_renderer_receiver.py  zmq_remote_renderer_sender.py
lunar_tools/: .#display_window.py  __init__.py  _optional.py  audio.py  cam.py  comms.py  config.py  control_input.py  display_window.py  dummy_audio.py  fontrender.py  fps_tracker.py  gl.py  health_reporting.py  image_gen.py  llm.py  logprint.py  midi.py  movie.py  osc.py  realtime_voice.py  test_utils.py  torch_utils.py  utils.py  web_search.py  zmq_comms.py
tests/: conftest.py  dummy_audio.py  extras_smoke.py  test_audio.py  test_audio_module.py  test_audio_services.py  test_cam_async.py  test_comms_services.py  test_deprecations.py  test_display_window.py  test_display_window_pygame.py  test_dummy_audio.py  test_fps_tracker.py  test_fps_tracker_example.py  test_image_gen.py  test_llm_services.py  test_logprint.py  test_midi_led.py  test_midi_meta_example.py  test_movie.py  test_movie_example.py  test_osc.py  test_package.py  test_presentation_config_loader.py  test_pygame_renderer_example.py  test_realtime_voice.py  test_realtime_voice_callbacks.py  test_realtime_voice_example.py  (+13 more)
(+123 files in other folders)
